make the background animation more customazable maybe fix some bugs